--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,37 +1,74 @@
-.container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
+@import url('https://fonts.googleapis.com/css?family=Hammersmith+One|Montserrat&display=swap');
+
+body {
+    /* background: linear-gradient(60deg, rgb(255, 81, 0) 1% 2%, black 2% 70%); */
+    background-color: rgb(255, 255, 255);
+    background-size: cover;
+    min-height: 100vh;
+    color: rgb(0, 0, 0);
 }
 
 .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    background-color: white !important;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border: 0;
     border-radius: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     font-size: 12px;
     letter-spacing: 5px;
+}
+
+.navbar-header {
+    display: flex;
+    justify-self: center;
+}
+
+.navbar-brand {
+    font-family: 'Hammersmith One', sans-serif;
+    letter-spacing: 2px;
+    font-size: 3rem;
 }
 
 .navbar-nav li a:hover {
     color: #1abc9c !important;
 }
 
-.footer-padding {
-    padding-bottom: 60px;
+.content-row {
+    padding: 5px 20px;
+}
+
+.blogbox {
+    background-color: rgb(255, 90, 90);
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 20px;
+    margin: 20px auto 20px;
+    height: 250px;
+    color: #fff;
+}
+
+.heading {
+    padding: 1px 10px 0;
+    font-family: 'Hammersmith One', sans-serif;
+}
+
+.content {
+    padding: 0 10px 2px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .footer {
-    position: absolute;
-    text-align: center;
+    position: fixed;
     bottom: 0;
+    text-align: center;
     width: 100%;
-    height: 60px;
-    background-color: #1abc9c;
+    height: 40px;
+    background-color: #000000;
+    padding-top: 10px;
 }
 
 .footer p {
-    margin-top: 25px;
-    font-size: 12px;
+    font-size: 15px;
     color: #fff;
+    font-weight: 600;
 }
