--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,10 +10,9 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">Xerycks</p>
+        <p class="navbar-brand">BLOGABBY</p>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <!-- 6 -->
         <li id="home"><a href="/">HOME</a></li>
         <li id="about"><a href="about">ABOUT US</a></li>
         <li id="contact"><a href="contact">CONTACT US</a></li>
@@ -22,4 +21,4 @@
   </nav>
 
 <body>
-  <div class="container">
+  <div class="Blogs">
