update footer page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,6 @@
 </div>
-<div class="footer-padding"></div>
 <div class="footer">
-  <p>Made with ❤️ by The App Brewery</p>
+  <p>Made By Xerycks For Money</p>
 </div>
 </div>
 </body>
