--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Hammersmith+One|Montserrat&display=swap');
 
 body {
-    /* background: linear-gradient(60deg, rgb(255, 81, 0) 1% 2%, black 2% 70%); */
-    background-color: rgb(255, 255, 255);
+    background: linear-gradient(60deg, #511845 1%, #900c3f 70%);
+    /* background-color: #511845; */
     background-size: cover;
     min-height: 100vh;
     color: rgb(0, 0, 0);
 }
 
 .navbar {
-    background-color: white !important;
+    background-color: #202040 !important;
     padding-top: 5px;
     padding-bottom: 5px;
     border: 0;
@@ -17,17 +17,18 @@ body {
     margin-bottom: 20px;
     font-size: 12px;
     letter-spacing: 5px;
+    padding: 5px 20px 5px;
 }
 
-.navbar-header {
-    display: flex;
-    justify-self: center;
-}
+.navbar-header {}
 
 .navbar-brand {
+    color: white !important;
     font-family: 'Hammersmith One', sans-serif;
     letter-spacing: 2px;
     font-size: 3rem;
+    position: relative;
+    top: 5px;
 }
 
 .navbar-nav li a:hover {
@@ -39,7 +40,6 @@ body {
 }
 
 .blogbox {
-    background-color: rgb(255, 90, 90);
     border: 2px solid rgb(255, 255, 255);
     border-radius: 20px;
     margin: 20px auto 20px;
