--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header') %>
 
-<h1>Contact</h1>
+<div class="container">
+    <h1>Contact Me</h1>
 
-<p><%= contactContent %></p>
+    <p><%= contactContent %></p>
+</div>
 
 <%- include('partials/footer') %>
