--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,10 @@ body {
 
 .navbar-header {}
 
+.blogs {
+    background-color: black !important;
+}
+
 .navbar-brand {
     color: white !important;
     font-family: 'Hammersmith One', sans-serif;
@@ -50,12 +54,18 @@ body {
 .heading {
     padding: 1px 10px 0;
     font-family: 'Hammersmith One', sans-serif;
+    height: 20%;
 }
 
 .content {
     padding: 0 10px 2px;
     font-family: 'Montserrat', sans-serif;
 }
+
+.social i {
+    color: White;
+}
+
 
 .footer {
     position: fixed;
