--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,27 +1,17 @@
 <%- include('partials/header') %>
 
-<div class="content-row">
-    <div class="blogbox">
-        <div class="heading">
-            <h1>Home</h1>
-        </div>
-        <div class="content">
-            <p><%= homeStartingContent %></p>
-        </div>
-    </div>
-</div>
-
 <div>
     <% posts.forEach(element => { %>
     <div class="col-sm-6 col-lg-3 content-row">
         <div class="blogbox">
             <div class="heading">
-                <h1><%= element.title %></h1>
+                <h1><%= element.blogTitle %></h1>
             </div>
             <hr>
             <div class="content">
                 <p>
-                    <%= element.content.substring(0 , 90)%> ...<a href="/posts/<%= element.title %>">Read More</a>
+                    <%= element.blogContent.substring(0 , 90)%> ...<a href="/posts/<%= element.blogTitle %>">Read
+                        More</a>
                 </p>
             </div>
         </div>
