--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Rishabh</title>
   <meta charset="utf-8">
+  <script src="https://kit.fontawesome.com/4b33ceaf3d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
@@ -14,8 +15,8 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li id="home"><a href="/">HOME</a></li>
-      <li id="about"><a href="about">ABOUT US</a></li>
-      <li id="contact"><a href="contact">CONTACT US</a></li>
+      <li id="about"><a href="/about">ABOUT</a></li>
+      <li id="contact"><a href="/contact">CONTACT</a></li>
     </ul>
   </nav>
 
