--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,84 +1,103 @@
-@import url('https://fonts.googleapis.com/css?family=Hammersmith+One|Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Hammersmith+One|Montserrat&display=swap");
 
 body {
-    background: linear-gradient(60deg, #511845 1%, #900c3f 70%);
-    /* background-color: #511845; */
-    background-size: cover;
-    min-height: 100vh;
-    color: rgb(0, 0, 0);
+  /* background: linear-gradient(60deg, #511845 1%, #900c3f 70%); */
+  background-color: rgb(41, 19, 19);
+  background-size: cover;
+  min-height: 100vh;
+  color: rgb(0, 0, 0);
 }
 
 .navbar {
-    background-color: #202040 !important;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 20px;
-    font-size: 12px;
-    letter-spacing: 5px;
-    padding: 5px 20px 5px;
-}
-
-.navbar-header {}
-
-.blogs {
-    background-color: black !important;
+  /* background-color: #202040 !important; */
+  background: linear-gradient(280deg, orange, brown) !important;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 20px;
+  font-size: 12px;
+  letter-spacing: 5px;
+  padding: 5px 20px 5px;
 }
 
 .navbar-brand {
-    color: white !important;
-    font-family: 'Hammersmith One', sans-serif;
-    letter-spacing: 2px;
-    font-size: 3rem;
-    position: relative;
-    top: 5px;
+  color: white !important;
+  font-family: "Hammersmith One", sans-serif;
+  letter-spacing: 3px;
+  font-size: 3rem;
+  position: relative;
+  top: 5px;
+}
+
+.navbar-nav li a {
+  color: #000 !important;
+  font-weight: 600;
 }
 
 .navbar-nav li a:hover {
-    color: #1abc9c !important;
+  color: #1abc9c !important;
 }
 
 .content-row {
-    padding: 5px 20px;
+  padding: 5px 20px;
 }
 
 .blogbox {
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 20px;
-    margin: 20px auto 20px;
-    height: 250px;
-    color: #fff;
+  /* border: 1px solid rgb(255, 255, 255); */
+  background: linear-gradient(60deg, orange, brown);
+  /* box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.493); */
+  /* -5px -5px 6px 3px rgba(255, 255, 255, 0.329); */
+  border-radius: 20px;
+  margin: 20px auto 20px;
+  height: 250px;
+  color: #fff;
+  transition: ease-out;
+  transition-duration: 0.2s;
+}
+
+.blogbox:hover {
+  position: relative;
+  bottom: 4px;
+  box-shadow: 3px 4px 4px rgb(95, 95, 95);
+  transition: all;
+  transition-duration: 0s;
 }
 
 .heading {
-    padding: 1px 10px 0;
-    font-family: 'Hammersmith One', sans-serif;
-    height: 20%;
+  padding: 1px 10px 0;
+  font-family: "Hammersmith One", sans-serif;
+  height: 20%;
 }
 
 .content {
-    padding: 0 10px 2px;
-    font-family: 'Montserrat', sans-serif;
+  padding: 0 10px 2px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.content a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+.bloghead {
+  text-align: center;
 }
 
 .social i {
-    color: White;
+  color: White;
 }
 
-
 .footer {
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    height: 40px;
-    background-color: #000000;
-    padding-top: 10px;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  background-color: #000000;
+  padding-top: 10px;
 }
 
 .footer p {
-    font-size: 15px;
-    color: #fff;
-    font-weight: 600;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 600;
 }
