home page update

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
             <hr>
             <div class="content">
                 <p>
-                    <%= element.blogContent.substring(0 , 90)%> ...<a href="/posts/<%= element.blogTitle %>">Read
+                    <%= element.blogContent.substring(0 , 200)%> . . .<a href="/posts/<%= element.blogTitle %>">...Read
                         More</a>
                 </p>
             </div>
