post page update

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header")  %>
-
-<h1><%= heading %></h1>
+<div class="bloghead">
+    <h1><%= heading %></h1>
+</div>
 <p><%= para %></p>
 
 <%- include("partials/footer")  %>
